Day 20: Part 2 working

--- a/2023/day20/Cargo.toml
+++ b/2023/day20/Cargo.toml
@@ -8,3 +8,4 @@ description.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+num-integer = "0.1"
