--- a/2016/day06/Cargo.toml
+++ b/2016/day06/Cargo.toml
@@ -5,5 +5,8 @@ edition.workspace = true
 authors.workspace = true
 description.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 fxhash = "0.2.1"
