--- a/2016/day11/Cargo.toml
+++ b/2016/day11/Cargo.toml
@@ -9,6 +9,7 @@ description.workspace = true
 workspace = true
 
 [dependencies]
+fxhash = "0.2.1"
 itertools = "0.12.0"
 lazy_static = "1.4.0"
 regex = "1.10.2"
