2016: Few Clippy fixes

--- a/2016/Cargo.toml
+++ b/2016/Cargo.toml
@@ -39,3 +39,5 @@ description = "Advent of Code 2016"
 redundant_closure_for_method_calls = "warn"
 match_same_arms = "warn"
 range_plus_one = "warn"
+trivially_copy_pass_by_ref = "warn"
+semicolon_if_nothing_returned = "warn"
