--- a/2017/Cargo.toml
+++ b/2017/Cargo.toml
@@ -28,3 +28,4 @@ match_same_arms = "warn"
 range_plus_one = "warn"
 trivially_copy_pass_by_ref = "warn"
 semicolon_if_nothing_returned = "warn"
+needless-for-each = "warn"
