--- a/2021/day13/Cargo.toml
+++ b/2021/day13/Cargo.toml
@@ -9,5 +9,6 @@ description.workspace = true
 workspace = true
 
 [dependencies]
+advent-of-code-ocr = "0.1.1"
 fxhash = "0.2.1"
 itertools = "0.12.1"
