--- a/2023/day05/Cargo.toml
+++ b/2023/day05/Cargo.toml
@@ -5,6 +5,9 @@ authors.workspace = true
 description.workspace = true
 edition.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 fxhash = "0.2.1"
 regex = "1"
