--- a/2023/day02/Cargo.toml
+++ b/2023/day02/Cargo.toml
@@ -5,5 +5,8 @@ authors.workspace = true
 description.workspace = true
 edition.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 itertools = "0.13.0"
