--- a/2023/day08/Cargo.toml
+++ b/2023/day08/Cargo.toml
@@ -5,6 +5,9 @@ authors.workspace = true
 description.workspace = true
 edition.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 regex = "1.10.2"
 num-integer = "0.1"
