--- a/2023/day12/Cargo.toml
+++ b/2023/day12/Cargo.toml
@@ -5,5 +5,8 @@ authors.workspace = true
 description.workspace = true
 edition.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 memoize = "0.4.1"
