--- a/2023/day20/Cargo.toml
+++ b/2023/day20/Cargo.toml
@@ -5,7 +5,8 @@ edition.workspace = true
 authors.workspace = true
 description.workspace = true
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lints]
+workspace = true
 
 [dependencies]
 num-integer = "0.1"
