--- a/2019/Cargo.toml
+++ b/2019/Cargo.toml
@@ -30,15 +30,10 @@ members = [
 resolver = "2"
 
 [workspace.lints.clippy]
-bool_to_int_with_if = "warn"
-flat_map_option = "warn"
-items_after_statements = "warn"
-match_same_arms = "warn"
-needless-for-each = "warn"
-range_plus_one = "warn"
-redundant_closure_for_method_calls = "warn"
-semicolon_if_nothing_returned = "warn"
-trivially_copy_pass_by_ref = "warn"
+pedantic = "deny"
+
+[workspace.lints.rust]
+unsafe_code = "forbid"
 
 [workspace.package]
 authors = ["Vincent Oberle"]
