--- a/2017/Cargo.toml
+++ b/2017/Cargo.toml
@@ -29,16 +29,14 @@ members = [
     "day25",
 ]
 
+[workspace.lints.clippy]
+pedantic = "deny"
+
+[workspace.lints.rust]
+unsafe_code = "forbid"
+
 [workspace.package]
 version = "0.1.0"
 edition = "2021"
 authors = ["Vincent Oberle"]
 description = "Advent of Code 2017"
-
-[workspace.lints.clippy]
-redundant_closure_for_method_calls = "warn"
-match_same_arms = "warn"
-range_plus_one = "warn"
-trivially_copy_pass_by_ref = "warn"
-semicolon_if_nothing_returned = "warn"
-needless-for-each = "warn"
