--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -6,9 +6,10 @@ authors = ["Vincent Oberle"]
 description = "Advent of Code utils"
 
 [lints.clippy]
-redundant_closure_for_method_calls = "warn"
-match_same_arms = "warn"
-range_plus_one = "warn"
+pedantic = "deny"
+
+[lints.rust]
+unsafe_code = "forbid"
 
 [dependencies]
 fxhash = "0.2.1"
