--- a/2015/day24/Cargo.toml
+++ b/2015/day24/Cargo.toml
@@ -5,5 +5,8 @@ edition.workspace = true
 authors.workspace = true
 description.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 itertools = "0.12.0"
