--- a/2015/day03/Cargo.toml
+++ b/2015/day03/Cargo.toml
@@ -5,5 +5,8 @@ edition.workspace = true
 authors.workspace = true
 description.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 fxhash = "0.2.1"
