--- a/2015/day04/Cargo.toml
+++ b/2015/day04/Cargo.toml
@@ -5,6 +5,9 @@ edition.workspace = true
 authors.workspace = true
 description.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 md5 = "0.7.0"
 rayon = "1.8.0"
