--- a/2015/day13/Cargo.toml
+++ b/2015/day13/Cargo.toml
@@ -5,6 +5,9 @@ edition.workspace = true
 authors.workspace = true
 description.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 fxhash = "0.2.1"
 itertools = "0.12.0"
