--- a/2015/day14/Cargo.toml
+++ b/2015/day14/Cargo.toml
@@ -5,5 +5,8 @@ edition.workspace = true
 authors.workspace = true
 description.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 regex = "1.10.2"
