--- a/2015/day15/Cargo.toml
+++ b/2015/day15/Cargo.toml
@@ -5,6 +5,9 @@ edition.workspace = true
 authors.workspace = true
 description.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 itertools = "0.12.0"
 regex = "1.10.2"
