--- a/2015/day21/Cargo.toml
+++ b/2015/day21/Cargo.toml
@@ -5,6 +5,9 @@ edition.workspace = true
 authors.workspace = true
 description.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 const_format = "0.2.32"
 itertools = "0.12.0"
