--- a/pi-coding-quest/year2025/Cargo.toml
+++ b/pi-coding-quest/year2025/Cargo.toml
@@ -6,6 +6,7 @@ edition.workspace = true
 version.workspace = true
 
 [dependencies]
+itertools = "0.14.0"
 rust_decimal = { version = "1.36.0", default-features = false }
 
 [lints]
