--- a/i18n-puzzles/Cargo.toml
+++ b/i18n-puzzles/Cargo.toml
@@ -20,6 +20,7 @@ members = [
     "puzzle18",
     # Disabled by default, as it needs some special setup for building, see README.
     # "puzzle19",
+    "puzzle20",
 ]
 resolver = "2"
 
