--- a/codyssi/puzzle_2024_01/Cargo.toml
+++ b/codyssi/puzzle_2024_01/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "puzzle01"
+name = "puzzle_2024_01"
 authors.workspace = true
 description.workspace = true
 edition.workspace = true
